Enhance healthcheck mechanism
